Name:           gi-cairo-sdl
Version:        0.0.1
License:        BSD3
License-file:   LICENSE
Copyright:      (c) 2018 Kilian Kilger, (c) 2001-2010 The Gtk2Hs Team, (c) Paolo Martini 2005, (c) Abraham Egnor 2003, 2004, (c) Aetion Technologies LLC 2004
Author:         Axel Simon, Duncan Coutts
Maintainer:     Kilian Kilger (kkilger@gmail.com)
Build-Type:     Simple
Cabal-Version:  >= 1.24
Stability:      experimental
homepage:       https://github.com/cohomology/gi-cairo-render
bug-reports:    https://github.com/cohomology/gi-cairo-render/issues
Synopsis:       GI friendly Binding to the Cairo library.
Description:    Cairo is a library to render high quality vector graphics. There
                exist various backends that allows rendering to Gtk windows, PDF,
                PS, PNG and SVG documents, amongst others.
Category:       Graphics
Tested-With:    GHC == 8.2.2, GHC == 8.0.2

Source-Repository head
  type:         git
  location:     https://github.com/cohomology/gi-cairo-render
  subdir:       examples/sdl

Executable sdl-demo
        build-depends:  base >= 4 && < 5,
                        sdl2 >= 2.0.4 && <2.5,
                        gi-cairo >= 1.0.16
        main-is:        CairoSDL.hs 
        default-language:   Haskell2010
